# oakd_driver

./: .gitignore  CMakeLists.txt  DEPENDENCY_SETUP.md  README.md  README_CPP.md  install_deps.sh  install_system_deps.sh  package.xml  plugins.xml  requirements.txt  run_oakd_with_venv.sh  setup.cfg  setup.py  test_dependencies.py
config/: camera.yaml  camera_wireless.yaml  driver.yaml  minimal_driver.yaml  multicam_example.yaml  oakd_params.yaml  rgbd.yaml  rtabmap.yaml  rtabmap_driver.yaml  rtabmap_minimal.yaml  segmentation.yaml  spatial_yolo.yaml  wireless_rgbd.yaml
depthai_ros_driver/: __init__.py
include/depthai_ros_driver/: driver.hpp  utils.hpp
include/depthai_ros_driver/dai_nodes/: base_node.hpp  sys_logger.hpp
include/depthai_ros_driver/dai_nodes/nn/: detection.hpp  segmentation.hpp  spatial_detection.hpp
include/depthai_ros_driver/dai_nodes/sensors/: camera.hpp  feature_tracker.hpp  img_pub.hpp  imu.hpp  rgbd.hpp  sensor_helpers.hpp  sensor_wrapper.hpp  slam.hpp  stereo.hpp  sync.hpp  thermal.hpp  tof.hpp  vio.hpp
include/depthai_ros_driver/param_handlers/: base_param_handler.hpp  driver_param_handler.hpp  feature_tracker_param_handler.hpp  imu_param_handler.hpp  nn_param_handler.hpp  pipeline_gen_param_handler.hpp  rgbd_param_handler.hpp  sensor_param_handler.hpp  slam_param_handler.hpp  stereo_param_handler.hpp  sync_param_handler.hpp  thermal_param_handler.hpp  tof_param_handler.hpp  vio_param_handler.hpp
include/oakd_driver/: oakd_driver.hpp
launch/: calibration.launch.py  camera.launch.py  camera_as_part_of_a_robot.launch.py  camera_wireless.launch.py  driver.launch.py  example_marker_publish.launch.py  example_multicam.launch.py  memory_safe_driver.launch.py  minimal_test.launch.py  oak_t.launch.py  oakd_driver.launch.py  oakd_driver_venv.launch.py  pointcloud.launch.py  robot_side.launch.py  rtabmap.launch.py  rtabmap_camera.launch.py  rtabmap_camera_minimal.launch.py  simple_driver.launch.py  simple_oakd_driver.launch.py  simple_test.launch.py  sr_poe_rgbd_pcl.launch.py  sr_rgbd_pcl.launch.py  ultra_minimal.launch.py
oakd_driver/: oakd_node.py  oakd_publisher.py
scripts/: build_check.sh  check_dependencies.sh  device_detector.py  install_dependencies.sh  monitor_memory.sh  optimize_system.sh  test_memory.sh
src/: driver.cpp  minimal_camera_test.cpp  oakd_driver.cpp  oakd_driver_node.cpp  oakd_publisher_node.cpp  simple_oakd_driver.cpp  stubs.cpp  utils.cpp
src/dai_nodes/: base_node.cpp  sys_logger.cpp
src/dai_nodes/nn/: nn_wrapper.cpp  segmentation.cpp  spatial_nn_wrapper.cpp
src/dai_nodes/sensors/: camera.cpp  feature_tracker.cpp  img_pub.cpp  imu.cpp  mono.cpp  rgb.cpp  rgbd.cpp  sensor_helpers.cpp  sensor_wrapper.cpp  slam.cpp  stereo.cpp  sync.cpp  thermal.cpp  tof.cpp  vio.cpp
src/param_handlers/: driver_param_handler.cpp  feature_tracker_param_handler.cpp  imu_param_handler.cpp  nn_param_handler.cpp  pipeline_gen_param_handler.cpp  rgbd_param_handler.cpp  sensor_param_handler.cpp  slam_param_handler.cpp  stereo_param_handler.cpp  sync_param_handler.cpp  thermal_param_handler.cpp  tof_param_handler.cpp  vio_param_handler.cpp
src/pipeline/: base_pipeline.cpp  base_types.cpp  pipeline_generator.cpp  simple_pipeline_generator.cpp  ultra_minimal_pipeline.cpp
